--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>yessmine</title>
 </head>
 <body>
-    welcome to yessmine
+    welcome to our first site website 
+    hope you like it 
+    bye ^^ 
+    by yessmine 
 </body>
 </html>
